# rustEZ

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish-pypi.yml
rustez/: Cargo.toml
rustez-cli/: Cargo.toml
rustez-py/: Cargo.toml  pyproject.toml
rustez-py/python/rustez/: __init__.py  exceptions.py
rustez-py/src/: lib.rs
rustez-py/tests/: test_strip_namespaces.py
rustez/src/: config.rs  device.rs  error.rs  lib.rs  rpc.rs
rustez/src/facts/: chassis.rs  mod.rs  personality.rs  routing_engine.rs  software.rs
rustez/tests/: integration_vsrx.rs
