[package]
name = "rustez"
version = "0.8.2"
edition = "2021"
authors = ["fastrevmd-lab"]
description = "A Rust replacement for Juniper PyEZ — async-first Junos automation built on rustnetconf"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fastrevmd-lab/rustEZ"
keywords = ["junos", "juniper", "netconf", "network", "automation"]
categories = ["network-programming"]
rust-version = "1.75"

[dependencies]
rustnetconf = "0.8.2"
tokio = { version = "1", features = ["full"] }
quick-xml = "0.37"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
serial_test = "3"
